--- a/styles/_mid-page-cta.scss
+++ b/styles/_mid-page-cta.scss
@@ -51,6 +51,9 @@
       padding-left: $spacing--desktop;
       text-align: right;
     }
+    @media screen and (min-width: 768px) and (max-width: 787px) {
+      padding-left: 0;
+    }
   }
 
   &__pre-title {
