--- a/styles/_tables.scss
+++ b/styles/_tables.scss
@@ -3,7 +3,7 @@
   table {
     display: inline-block;
     max-width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
     border-spacing: 0;
     border-collapse: collapse;
     box-shadow: 2px 2px 4px hsla(0, 0%, 80%, .15);
